--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,5 +7,5 @@ commands:
   adminchat:
     usage: /adminchat
     aliases: [ ach, achat ]
-  GSkyblock:
-    usage: /GSkyblock
+  gskyblock:
+    usage: /gskyblock
