--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,10 @@ commands:
     aliases: [ ach, achat ]
   gskyblock:
     usage: /gskyblock
+
+permissions:
+  skyblockmanager.*:
+    children:
+      skyblockmanager.command.reload: true
+      skyblockmanager.command.livebroadcast: true
+      skyblockmanager.adminchat: true
