--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,16 +8,9 @@ sbmanager:
   #### ADMINCHAT ####
 
   acprefix: "&7[&c&lAC&7]"
-  nickcolor: "&c"
-  textcolor: "&7»"
+  acnickcolor: "&c"
+  actextcolor: "&7»"
   ytmessage: "&7Zapraszamy na &c&lLIVE&7:"
   hoverytmessage: "&7Kliknij tutaj, aby otworzyć!"
 
 
-
-  public static String prefix = "&a&lSKYBLOCK &f»";
-  public static String ACprefix = "&7[&c&lAC&7]";
-  public static String ACnickcolor = "&c";
-  public static String ACtextcolor = "&7»";
-  public static String YTbroadcast = "&7Zapraszamy na &c&lLIVE! &8[KLIKNIJ TUTAJ]";
-  public static String YTbroadcastHover = "&7Kliknij tutaj, aby otworzyć!";
